# OpenMesher2D

./: CMakeLists.txt  LICENSE  README.md
src/geometry/: distance.hh
src/mesh/: mesh.io.cc  mesh.io.hh  topology.cc  topology.hh
src/mesher/: container.hh  delaunay.cc  mesher.hh  refine.cc  smooth.cc  triangulate.cc
test/mesher/: main.cc
